[tool.poetry]
name = "test_uvicorn_issue_1022"
version = "0.1.0"
description = ""
authors = ["Vibhu Agarwal <vibhu4agarwal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = {git = "git@github.com:encode/uvicorn.git"}
httptools = "^0.2.0"
fastapi = "^0.65.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
